--- a/templates/home.html
+++ b/templates/home.html
@@ -193,13 +193,13 @@
                         <div id="Main-AD1" class="ADS col-md-5">
                             {% for obj in object_list2 %}
                                 <div>
-                                        <a><img src="{{ obj.homephoto1.url }}"></a>
+                                        <a><img src="{% static "images/a.jpg" %}"></a>
                                 </div>
                                 <div>
-                                        <a><img src="{{ obj.homephoto2.url }}"></a>
+                                        <a><img src="{% static "images/a.jpg" %}"></a>
                                  </div>
                                  <div>
-                                         <a><img src="{{ obj.homephoto3.url }}"></a>
+                                         <a><img src="{% static "images/a.jpg" %}"></a>
                                 </div>
                               {% endfor %}
                         </div>
@@ -247,13 +247,13 @@
                         <div id="Main-AD2" class="ADS  col-md-5">
                           {% for obj in object_list2 %}
                                 <div>
-                                        <a><img src="{{ obj.home2photo1.url }}"></a>
+                                        <a><img src="{% static "images/a.jpg" %}"></a>
                                 </div>
                                 <div>
-                                        <a><img src="{{ obj.home2photo2.url }}"></a>
+                                        <a><img src="{% static "images/a.jpg" %}"></a>
                                 </div>
                                 <div>
-                                         <a href="#"><img src="{{ obj.home2photo3.url }}"></a>
+                                         <a href="#"><img src="{% static "images/a.jpg" %}"></a>
                                 </div>
                               {% endfor %}
                                                                      </div>
