Add all my files

--- a/templates/MobileShop.html
+++ b/templates/MobileShop.html
@@ -137,7 +137,7 @@
                                                                 <div class="card-body">
                                                                   <h5 class="card-title">{{ obj.shop_name }}</h5>
                                                                   <p class="card-text">{{ obj.shop_location }}</p>
-                                                                  <p class="card-text"> {{ obj.shop_image}} </p>
+                                                                  <a class="card-text"> {{ obj.shop_image}} </a>
                                                                   <p class="ShareText">
 
                                                                     تم زياره الموقع <span>{{ obj.num_of_share }}</span> مرات
