--- a/templates/ClothesShop.html
+++ b/templates/ClothesShop.html
@@ -136,7 +136,7 @@
                                           <div class="card-body">
                                             <h5 class="card-title">  {{ obj.shop_name}} </h5>
                                             <p class="card-text"> {{ obj.shop_location}} </p>
-                                            <a class="card-text"> {{ obj.shop_image}} </a>
+                                            <a> {{ obj.shop_image}} </a>
                                             <p class="ShareText">
 
                                               تم زياره الموقع <span>{{ obj.num_of_share }}</span> مرات
