--- a/templates/mobiles.html
+++ b/templates/mobiles.html
@@ -146,7 +146,7 @@
                                     </a>
                             </button>
                         </div>
-                        <img class="card-img-top" src="{% static "images/girl2.jpg" %}" alt="Card image cap">
+                        <img class="card-img-top" src="https://drive.google.com/uc?id={{ shop_image_id }}" alt="Card image cap">
 
   </div>
 
@@ -161,7 +161,7 @@
 
 
                     <div class="col-sm Item">
-                        <img  src="{% static "images/girl1.jpg" %}" >
+                      <img  src="https://drive.google.com/uc?id={{ obj.product_image_id }}" >
                         <ul>
                              <h5> {{ product.type }}</h5>
                               <li>
@@ -176,10 +176,6 @@
                                       المواصفات :
                                      <span>{{ product.describtion }} </span>
                               </li>
-                              <li>
-                                      المواصفات :
-                                     <span>{{ product.image }} </span>
-                              </li>
                          </ul>
                        </div>
                        {% endfor %}
@@ -191,7 +187,9 @@
 
 <div class="col-sm  asideAD">
         <div>
-             <img src="{% static "images/a.jpg" %}">
+          {%for obj in object_list%}
+            <img src="https://drive.google.com/uc?id={{ obj.phone5photo_id }}">
+          {%endfor%}
         </div>
 
 </div>
