Add all my files

--- a/templates/MobileShop.html
+++ b/templates/MobileShop.html
@@ -133,7 +133,7 @@
                                                    {% for obj in object_list %}
 
                                                             <a href="{% url 'mobiles' pk=obj.pk %}" class="col-md col-md-3">
-                                                              <img class="card-img-top" src="https://drive.google.com/uc?id={{ obj.shop_image_id }} " >
+                                                              <img class="card-img-top" src="https://drive.google.com/uc?id={{ obj.shop_image }} " >
                                                                 <div class="card-body">
                                                                   <h5 class="card-title">{{ obj.shop_name }}</h5>
                                                                   <p class="card-text">{{ obj.shop_location }}</p>
@@ -163,13 +163,13 @@
                                               {% for obj in object_list3%}
 
                                               <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.phone1photo1_id }}">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.phone1photo1 }}">
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo2_id }}">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo2 }}">
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo3_id }}">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo3 }}">
                                               </div>
                                               {% endfor %}
 
@@ -180,13 +180,13 @@
                                               {% for obj in object_list3%}
 
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo1_id }}">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo1 }}">
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone2photo2_id }}">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone2photo2 }}">
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone2photo3_id }}">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone2photo3 }}">
                                               </div>
                                               {% endfor %}
 
@@ -197,13 +197,13 @@
                                               {% for obj in object_list3%}
 
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo1_id }}">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo1 }}">
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo2_id }}">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo2 }}">
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo3_id }}">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo3 }}">
                                               </div>
                                               {% endfor %}
 
@@ -214,13 +214,13 @@
                                                   {% for obj in object_list3%}
 
                                                   <div>
-                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo1_id }}">
+                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo1 }}">
                                                   </div>
                                                   <div>
-                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo2_id }}">
+                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo2 }}">
                                                   </div>
                                                   <div>
-                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo3_id }}">
+                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo3 }}">
                                                   </div>
                                                   {% endfor %}
 
