--- a/templates/clothes.html
+++ b/templates/clothes.html
@@ -160,7 +160,7 @@
 
 
                     <div class="col-sm Item">
-                        <img  src="https://drive.google.com/uc?id={{ obj.product_image_id }}" >
+                        <img  src="https://drive.google.com/uc?id={{ obj.product_image }}" >
                         <ul>
                              <h5> {{ product.type }}</h5>
                              <li>
@@ -191,7 +191,7 @@
 <div class="col-sm  asideAD">
         <div>
           {%for obj in object_list%}
-             <img src="https://drive.google.com/uc?id={{ obj.cloth5photo_id }}">
+             <img src="https://drive.google.com/uc?id={{ obj.cloth5photo }}">
           {%endfor%}
         </div>
 
