--- a/templates/mobiles.html
+++ b/templates/mobiles.html
@@ -146,7 +146,7 @@
                                     </a>
                             </button>
                         </div>
-                        <img class="card-img-top" src="https://drive.google.com/uc?id={{ shop_image_id }}" alt="Card image cap">
+                        <img class="card-img-top" src="https://drive.google.com/uc?id={{ shop_image }}" alt="Card image cap">
 
   </div>
 
@@ -161,7 +161,7 @@
 
 
                     <div class="col-sm Item">
-                      <img  src="https://drive.google.com/uc?id={{ obj.product_image_id }}" >
+                      <img  src="https://drive.google.com/uc?id={{ obj.product_image }}" >
                         <ul>
                              <h5> {{ product.type }}</h5>
                               <li>
@@ -188,7 +188,7 @@
 <div class="col-sm  asideAD">
         <div>
           {%for obj in object_list%}
-            <img src="https://drive.google.com/uc?id={{ obj.phone5photo_id }}">
+            <img src="https://drive.google.com/uc?id={{ obj.phone5photo }}">
           {%endfor%}
         </div>
 
