Add all my files

--- a/templates/clothes.html
+++ b/templates/clothes.html
@@ -160,7 +160,7 @@
 
 
                     <div class="col-sm Item">
-                        <img  src="https://drive.google.com/uc?id={{ obj.product_image }}" >
+                        <img  src="https://drive.google.com/uc?id={{ product.product_image }}" >
                         <ul>
                              <h5> {{ product.type }}</h5>
                              <li>
