--- a/templates/mobiles.html
+++ b/templates/mobiles.html
@@ -161,7 +161,7 @@
 
 
                     <div class="col-sm Item">
-                      <img  src="https://drive.google.com/uc?id={{ product.product_image }}" >
+                      <img  src="https://drive.google.com/uc?id={{ product.image }}" >
                         <ul>
                              <h5> {{ product.type }}</h5>
                               <li>
