Add all my files

--- a/templates/clothes.html
+++ b/templates/clothes.html
@@ -145,7 +145,7 @@
                                     </a>
                             </button>
                         </div>
-                        <img class="card-img-top" src="https://drive.google.com/uc?id={{ shop_image_id }}" alt="Card image cap">
+                        <img class="card-img-top" src="https://drive.google.com/uc?id={{ shops.shop_image }}">
 
   </div>
 
