--- a/templates/mobiles.html
+++ b/templates/mobiles.html
@@ -146,7 +146,7 @@
                                     </a>
                             </button>
                         </div>
-                        <img class="card-img-top" src="https://drive.google.com/uc?id={{ shop_image }}" alt="Card image cap">
+                        <img class="card-img-top" src="https://drive.google.com/uc?id={{ shops.shop_image }}">
 
   </div>
 
