Add all my files

--- a/templates/MobileShop.html
+++ b/templates/MobileShop.html
@@ -133,7 +133,7 @@
                                                    {% for obj in object_list %}
 
                                                             <a href="{% url 'mobiles' pk=obj.pk %}" class="col-md col-md-3">
-                                                              <img class="card-img-top" src="https://drive.google.com/uc?id={{ obj.shop_image }} " >
+                                                              <img class="card-img-top" src="https://drive.google.com/uc?id={{ obj.shop_image }} " style="width:246px;height:255px;">
                                                                 <div class="card-body">
                                                                   <h5 class="card-title">{{ obj.shop_name }}</h5>
                                                                   <p class="card-text">{{ obj.shop_location }}</p>
@@ -163,13 +163,13 @@
                                               {% for obj in object_list3%}
 
                                               <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.phone1photo1 }}">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.phone1photo1 }}" style="width:290px;height:307px;">
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo2 }}">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo2 }}" style="width:290px;height:307px;">
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo3 }}">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo3 }}" style="width:290px;height:307px;">
                                               </div>
                                               {% endfor %}
 
@@ -180,13 +180,13 @@
                                               {% for obj in object_list3%}
 
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo1 }}">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone1photo1 }}" style="width:290px;height:307px;">
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone2photo2 }}">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone2photo2 }}" style="width:290px;height:307px;">
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone2photo3 }}">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone2photo3 }}" style="width:290px;height:307px;">
                                               </div>
                                               {% endfor %}
 
@@ -197,13 +197,13 @@
                                               {% for obj in object_list3%}
 
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo1 }}">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo1 }}" style="width:290px;height:307px;">
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo2 }}">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo2 }}" style="width:290px;height:307px;">
                                               </div>
                                               <div>
-                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo3 }}">
+                                                <img src="https://drive.google.com/uc?id={{ obj.phone3photo3 }}" style="width:290px;height:307px;">
                                               </div>
                                               {% endfor %}
 
@@ -214,13 +214,13 @@
                                                   {% for obj in object_list3%}
 
                                                   <div>
-                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo1 }}">
+                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo1 }}" style="width:290px;height:307px;">
                                                   </div>
                                                   <div>
-                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo2 }}">
+                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo2 }}" style="width:290px;height:307px;">
                                                   </div>
                                                   <div>
-                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo3 }}">
+                                                    <img src="https://drive.google.com/uc?id={{ obj.phone4photo3 }}" style="width:290px;height:307px;">
                                                   </div>
                                                   {% endfor %}
 
