--- a/templates/clothes.html
+++ b/templates/clothes.html
@@ -145,7 +145,7 @@
                                     </a>
                             </button>
                         </div>
-                        <img class="card-img-top" src="https://drive.google.com/uc?id={{ shops.shop_image }}">
+                        <img class="card-img-top" src="https://drive.google.com/uc?id={{ shops.shop_image }}" style="width:220px;height:220px;">
 
   </div>
 
@@ -160,7 +160,7 @@
 
 
                     <div class="col-sm Item">
-                        <img  src="https://drive.google.com/uc?id={{ product.image }}" >
+                        <img  src="https://drive.google.com/uc?id={{ product.image }}" style="width:246px;height:255px;">
                         <ul>
                              <h5> {{ product.type }}</h5>
                              <li>
@@ -191,7 +191,7 @@
 <div class="col-sm  asideAD">
         <div>
           {%for obj in object_list%}
-             <img src="https://drive.google.com/uc?id={{ obj.cloth5photo }}">
+             <img src="https://drive.google.com/uc?id={{ obj.cloth5photo }}" style="width:232px;height:450px;">
           {%endfor%}
         </div>
 
