--- a/templates/ClothesShop.html
+++ b/templates/ClothesShop.html
@@ -132,7 +132,7 @@
 
                                     {% for obj   in object_list %}
                                       <a href="{% url 'clothes' pk=obj.pk %}" class="col-md col-md-3">
-                                        <img class="card-img-top" src="https://drive.google.com/uc?id={{ obj.shop_image }} " >
+                                        <img class="card-img-top" src="https://drive.google.com/uc?id={{ obj.shop_image }} " style="width:246px;height:255px;" >
                                           <div class="card-body">
                                             <h5 class="card-title">  {{ obj.shop_name}} </h5>
                                             <p class="card-text"> {{ obj.shop_location}} </p>
@@ -160,13 +160,13 @@
                                             <div id="ClothesShop-AD1" class="SP-ADS col-sm">
                                               {% for obj in object_list3%}
                                                 <div>
-                                                    <img src="https://drive.google.com/uc?id={{ obj.cloth1photo1 }}">
+                                                    <img src="https://drive.google.com/uc?id={{ obj.cloth1photo1 }}" style="width:290px;height:307px;">
                                                 </div>
                                                 <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth1photo2 }}">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth1photo2 }}" style="width:290px;height:307px;">
                                                 </div>
                                                 <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth1photo3 }}">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth1photo3 }}" style="width:290px;height:307px;">
                                                 </div>
                                               {% endfor %}
 
@@ -177,13 +177,13 @@
                                               {% for obj in object_list3%}
 
                                                 <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth2photo1 }}">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth2photo1 }}" style="width:290px;height:307px;">
                                                 </div>
                                                 <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth2photo2 }}">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth2photo2 }}" style="width:290px;height:307px;">
                                                 </div>
                                                 <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth2photo3 }}">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth2photo3 }}" style="width:290px;height:307px;">
                                                 </div>
                                               {% endfor %}
 
@@ -194,13 +194,13 @@
                                               {% for obj in object_list3%}
 
                                                 <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth3photo1 }}">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth3photo1 }}" style="width:290px;height:307px;">
                                                 </div>
                                                 <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth3photo2 }}">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth3photo2 }}" style="width:290px;height:307px;">
                                                 </div>
                                                 <div>
-                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth3photo3 }}">
+                                                  <img src="https://drive.google.com/uc?id={{ obj.cloth3photo3 }}" style="width:290px;height:307px;">
                                                 </div>
                                                 {% endfor %}
 
@@ -211,13 +211,13 @@
                                                   {% for obj in object_list3%}
 
                                                     <div>
-                                                      <img src="https://drive.google.com/uc?id={{ obj.cloth4photo1 }}">
+                                                      <img src="https://drive.google.com/uc?id={{ obj.cloth4photo1 }}" style="width:290px;height:307px;">
                                                     </div>
                                                     <div>
-                                                      <img src="https://drive.google.com/uc?id={{ obj.cloth4photo2 }}">
+                                                      <img src="https://drive.google.com/uc?id={{ obj.cloth4photo2 }}" style="width:290px;height:307px;">
                                                     </div>
                                                     <div>
-                                                      <img src="https://drive.google.com/uc?id={{ obj.cloth4photo3 }}">
+                                                      <img src="https://drive.google.com/uc?id={{ obj.cloth4photo3 }}" style="width:290px;height:307px;">
                                                     </div>
                                                     {% endfor %}
 
